
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int TOUCH_PAD_MAX ;
 int TOUCH_THRESH_NO_USE ;
 int touch_pad_config (int,int ) ;

__attribute__((used)) static void tp_example_touch_pad_init(void)
{
    for (int i = 0; i < TOUCH_PAD_MAX; i++) {

        touch_pad_config(i, TOUCH_THRESH_NO_USE);
    }
}
